--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -6,10 +6,10 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.page.body
     - field.field.node.page.field_metatag
-    - field.field.node.page.field_paragraphs
     - field.field.node.page.field_vih_banner
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
+    - field.field.node.page.field_vih_paragraphs
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
     - node.type.page
@@ -27,7 +27,6 @@ third_party_settings:
     group_banner:
       children:
         - title
-        - field_banner
         - field_vih_banner
       parent_name: ''
       weight: 0
@@ -70,7 +69,7 @@ third_party_settings:
         - translation
         - scheduled_update
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -108,20 +107,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_paragraphs:
-    type: paragraphs
-    weight: 5
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: closed
-      closed_mode: summary
-      autocollapse: all
-      add_mode: modal
-      form_display_mode: default
-      default_paragraph_type: 1_column_action_centered
-    third_party_settings: {  }
-    region: content
   field_vih_banner:
     type: entity_browser_file
     weight: 30
@@ -150,6 +135,20 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_vih_paragraphs:
+    weight: 2
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
+      form_display_mode: default
+      default_paragraph_type: 1_column_action_centered
+    third_party_settings: {  }
+    type: paragraphs
     region: content
   langcode:
     type: language_select
