--- a/config/sync/core.entity_view_display.node.event.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.event.list_advanced.yml
@@ -10,13 +10,13 @@ dependencies:
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_metatag
-    - field.field.node.event.field_paragraphs
     - field.field.node.event.field_vih_banner
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_persons_limit
     - field.field.node.event.field_vih_event_status
+    - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.scheduled_update
     - image.style.list_advanced
     - node.type.event
@@ -83,12 +83,12 @@ content:
 hidden:
   field_event_price: true
   field_metatag: true
-  field_paragraphs: true
   field_vih_banner: true
   field_vih_cource_contact_person: true
   field_vih_course_subheading: true
   field_vih_event_persons_limit: true
   field_vih_event_status: true
+  field_vih_paragraphs: true
   langcode: true
   links: true
   scheduled_update: true
