--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
+    - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - taxonomy.vocabulary.vih_class
   module:
     - entity_browser
@@ -26,12 +26,12 @@ third_party_settings:
   field_group:
     group_content:
       children:
-        - field_heading
         - field_vih_heading
         - field_subheading
         - field_paragraphs
+        - field_vih_paragraphs
       parent_name: ''
-      weight: 4
+      weight: 2
       format_type: tab
       format_settings:
         id: ''
@@ -45,7 +45,7 @@ third_party_settings:
       children:
         - field_vih_banner
       parent_name: ''
-      weight: 2
+      weight: 0
       format_type: tab
       format_settings:
         id: ''
@@ -65,7 +65,7 @@ third_party_settings:
         - field_vih_class_price_addition
         - field_vih_class_class_packages
       parent_name: ''
-      weight: 3
+      weight: 1
       format_type: tab
       format_settings:
         label: 'Fag detaljer'
@@ -83,7 +83,7 @@ third_party_settings:
         - translation
         - path
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -111,20 +111,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
-    region: content
-  field_paragraphs:
-    type: paragraphs
-    weight: 18
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: closed
-      closed_mode: summary
-      autocollapse: all
-      add_mode: modal
-      form_display_mode: default
-      default_paragraph_type: 1_column_action_centered
-    third_party_settings: {  }
     region: content
   field_subheading:
     weight: 17
@@ -197,6 +183,20 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_paragraphs:
+    type: paragraphs
+    weight: 19
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
+      form_display_mode: default
+      default_paragraph_type: 1_column_action_centered
+    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 19
