--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
@@ -13,6 +12,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
+    - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - image.style.banner_small
     - taxonomy.vocabulary.vih_class
   module:
@@ -35,7 +35,7 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -46,17 +46,8 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_paragraphs:
-    type: entity_reference_revisions_entity_view
-    weight: 8
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_subheading:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -74,7 +65,7 @@ content:
     region: content
   field_vih_class_class_packages:
     type: entity_reference_entity_view
-    weight: 7
+    weight: 6
     region: content
     label: hidden
     settings:
@@ -82,17 +73,6 @@ content:
       link: false
     third_party_settings: {  }
   field_vih_class_material_price:
-    weight: 6
-    label: above
-    settings:
-      thousand_separator: ''
-      decimal_separator: .
-      scale: 2
-      prefix_suffix: true
-    third_party_settings: {  }
-    type: number_decimal
-    region: content
-  field_vih_class_price_addition:
     weight: 5
     label: above
     settings:
@@ -103,14 +83,34 @@ content:
     third_party_settings: {  }
     type: number_decimal
     region: content
+  field_vih_class_price_addition:
+    weight: 4
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
+    region: content
   field_vih_heading:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
+  field_vih_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 8
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
 hidden:
   field_vih_class_color: true
   field_vih_class_image: true
