--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_table_teaser
     - field.field.taxonomy_term.vih_class.field_metatag
-    - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - field.field.taxonomy_term.vih_class.field_vih_heading
+    - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - image.style.vih_class_teaser
     - taxonomy.vocabulary.vih_class
   module:
@@ -43,7 +43,6 @@ content:
     region: content
 hidden:
   field_metatag: true
-  field_paragraphs: true
   field_subheading: true
   field_vih_banner: true
   field_vih_class_class_packages: true
@@ -51,4 +50,5 @@ hidden:
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
   field_vih_heading: true
+  field_vih_paragraphs: true
   langcode: true
