--- a/config/sync/field.field.block_content.notify.field_vih_highlighted_text.yml
+++ b/config/sync/field.field.block_content.notify.field_vih_highlighted_text.yml
@@ -1,12 +1,12 @@
-uuid: cdaf29b8-5ad3-4747-8bfd-f1ea95448348
+uuid: 5b817dd8-063f-48af-8ff4-0be5203b78c0
 langcode: da
 status: true
 dependencies:
   config:
     - block_content.type.notify
-    - field.storage.block_content.field_highlighted_text
-id: block_content.notify.field_highlighted_text
-field_name: field_highlighted_text
+    - field.storage.block_content.field_vih_highlighted_text
+id: block_content.notify.field_vih_highlighted_text
+field_name: field_vih_highlighted_text
 entity_type: block_content
 bundle: notify
 label: 'Fremhævet tekst'
