--- a/config/sync/core.entity_form_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_form_display.block_content.banner.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - block_content.type.banner
     - entity_browser.browser.image_browser
-    - field.field.block_content.banner.field_image
+    - field.field.block_content.banner.field_vih_image
     - field.field.block_content.banner.field_vih_link
   module:
     - entity_browser
@@ -16,9 +16,9 @@ targetEntityType: block_content
 bundle: banner
 mode: default
 content:
-  field_image:
+  field_vih_image:
     type: entity_browser_file
-    weight: 1
+    weight: 2
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -30,7 +30,7 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_link:
-    weight: 26
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
