--- a/config/sync/core.entity_view_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_view_display.block_content.banner.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - block_content.type.banner
-    - field.field.block_content.banner.field_image
+    - field.field.block_content.banner.field_vih_image
     - field.field.block_content.banner.field_vih_link
     - image.style.banner
   module:
@@ -15,14 +15,14 @@ targetEntityType: block_content
 bundle: banner
 mode: default
 content:
-  field_image:
+  field_vih_image:
     type: image_url
-    weight: 0
+    weight: 1
+    region: content
     label: hidden
     settings:
       image_style: banner
     third_party_settings: {  }
-    region: content
   field_vih_link:
     weight: 2
     label: hidden
