--- a/config/sync/field.field.block_content.banner.field_vih_image.yml
+++ b/config/sync/field.field.block_content.banner.field_vih_image.yml
@@ -1,14 +1,14 @@
-uuid: 6bc3ccf2-bf7c-490a-878a-98908332f36b
+uuid: 1f1cc5cf-8807-410a-a66d-b0fcc1f83077
 langcode: da
 status: true
 dependencies:
   config:
     - block_content.type.banner
-    - field.storage.block_content.field_image
+    - field.storage.block_content.field_vih_image
   module:
     - image
-id: block_content.banner.field_image
-field_name: field_image
+id: block_content.banner.field_vih_image
+field_name: field_vih_image
 entity_type: block_content
 bundle: banner
 label: Billede
@@ -28,7 +28,7 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: e13903a1-516d-4ef9-9288-0de24ce2dd15
+    uuid: null
     alt: ''
     title: ''
     width: 1275
