--- a/config/sync/field.field.node.event.field_vih_event_end_date.yml
+++ b/config/sync/field.field.node.event.field_vih_event_end_date.yml
@@ -1,14 +1,14 @@
-uuid: 1feefddd-2f7f-4e8c-9bd3-528289d754a9
+uuid: c93f8306-0164-4a35-ad8f-7bc1f26f1940
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_event_end_date
+    - field.storage.node.field_vih_event_end_date
     - node.type.event
   module:
     - datetime
-id: node.event.field_event_end_date
-field_name: field_event_end_date
+id: node.event.field_vih_event_end_date
+field_name: field_vih_event_end_date
 entity_type: node
 bundle: event
 label: 'Slut dato'
