--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.body
-    - field.field.node.event.field_event_end_date
     - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
@@ -14,6 +13,7 @@ dependencies:
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
+    - field.field.node.event.field_vih_event_end_date
     - field.field.node.event.field_vih_event_persons_limit
     - field.field.node.event.field_vih_event_status
     - field.field.node.event.field_vih_paragraphs
@@ -48,7 +48,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_event_end_date: true
   field_event_price: true
   field_event_start_date: true
   field_image: true
@@ -57,6 +56,7 @@ hidden:
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
   field_vih_course_subheading: true
+  field_vih_event_end_date: true
   field_vih_event_persons_limit: true
   field_vih_event_status: true
   field_vih_paragraphs: true
