--- a/config/sync/core.entity_view_display.node.event.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.event.list_advanced.yml
@@ -6,7 +6,6 @@ dependencies:
     - core.entity_view_mode.node.list_advanced
     - field.field.node.event.body
     - field.field.node.event.field_event_price
-    - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_vih_banner
@@ -15,6 +14,7 @@ dependencies:
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_end_date
     - field.field.node.event.field_vih_event_persons_limit
+    - field.field.node.event.field_vih_event_start_date
     - field.field.node.event.field_vih_event_status
     - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.scheduled_update
@@ -45,15 +45,6 @@ content:
       trim_length: 150
     third_party_settings: {  }
     region: content
-  field_event_start_date:
-    weight: 3
-    label: hidden
-    settings:
-      timezone_override: ''
-      format_type: vih_medium_date_short_month
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
   field_image:
     weight: 1
     label: hidden
@@ -74,6 +65,15 @@ content:
   field_vih_event_end_date:
     type: datetime_default
     weight: 5
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: vih_medium_date_short_month
+    third_party_settings: {  }
+  field_vih_event_start_date:
+    type: datetime_default
+    weight: 4
     region: content
     label: hidden
     settings:
