--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -6,7 +6,6 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.body
     - field.field.node.event.field_event_price
-    - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_vih_banner
@@ -15,6 +14,7 @@ dependencies:
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_end_date
     - field.field.node.event.field_vih_event_persons_limit
+    - field.field.node.event.field_vih_event_start_date
     - field.field.node.event.field_vih_event_status
     - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.scheduled_update
@@ -49,7 +49,6 @@ content:
     third_party_settings: {  }
 hidden:
   field_event_price: true
-  field_event_start_date: true
   field_image: true
   field_metatag: true
   field_vih_banner: true
@@ -58,6 +57,7 @@ hidden:
   field_vih_course_subheading: true
   field_vih_event_end_date: true
   field_vih_event_persons_limit: true
+  field_vih_event_start_date: true
   field_vih_event_status: true
   field_vih_paragraphs: true
   langcode: true
