--- a/config/sync/field.field.node.event.field_vih_event_start_date.yml
+++ b/config/sync/field.field.node.event.field_vih_event_start_date.yml
@@ -1,14 +1,14 @@
-uuid: d56abf64-0a93-46cf-b351-5b064fdf1952
+uuid: af913fc1-39f3-459e-b772-f9a6504b528a
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_event_start_date
+    - field.storage.node.field_vih_event_start_date
     - node.type.event
   module:
     - datetime
-id: node.event.field_event_start_date
-field_name: field_event_start_date
+id: node.event.field_vih_event_start_date
+field_name: field_vih_event_start_date
 entity_type: node
 bundle: event
 label: 'Start dato'
