--- a/config/sync/core.entity_view_display.node.event.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.event.list_advanced.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.node.list_advanced
     - field.field.node.event.body
-    - field.field.node.event.field_event_price
     - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_vih_banner
@@ -14,6 +13,7 @@ dependencies:
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_end_date
     - field.field.node.event.field_vih_event_persons_limit
+    - field.field.node.event.field_vih_event_price
     - field.field.node.event.field_vih_event_start_date
     - field.field.node.event.field_vih_event_status
     - field.field.node.event.field_vih_paragraphs
@@ -81,12 +81,12 @@ content:
       format_type: vih_medium_date_short_month
     third_party_settings: {  }
 hidden:
-  field_event_price: true
   field_metatag: true
   field_vih_banner: true
   field_vih_cource_contact_person: true
   field_vih_course_subheading: true
   field_vih_event_persons_limit: true
+  field_vih_event_price: true
   field_vih_event_status: true
   field_vih_paragraphs: true
   langcode: true
