--- a/config/sync/webform.webform.webform.yml
+++ b/config/sync/webform.webform.webform.yml
@@ -123,5 +123,9 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
+  administer:
+    roles: {  }
+    users: {  }
+    permissions: {  }
 handlers: {  }
 uuid: 4c62d5eb-514d-40c7-a2b1-55d35fe12be3
