--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.event.body
-    - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_vih_banner
     - field.field.node.event.field_vih_cource_contact_person
@@ -16,6 +15,7 @@ dependencies:
     - field.field.node.event.field_vih_event_price
     - field.field.node.event.field_vih_event_start_date
     - field.field.node.event.field_vih_event_status
+    - field.field.node.event.field_vih_image
     - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.scheduled_update
     - node.type.event
@@ -49,6 +49,7 @@ third_party_settings:
     group_content:
       children:
         - field_image
+        - field_vih_image
         - field_vih_course_heading
         - field_vih_course_subheading
         - body
@@ -69,7 +70,6 @@ third_party_settings:
         - field_vih_event_status
         - field_vih_event_start_date
         - field_vih_event_end_date
-        - field_event_price
         - field_vih_event_price
         - field_vih_cource_contact_person
         - field_vih_event_persons_limit
@@ -113,7 +113,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 10
+    weight: 11
     settings:
       rows: 9
       summary_rows: 3
@@ -124,19 +124,6 @@ content:
     type: datetime_timestamp
     weight: 15
     settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_image:
-    type: entity_browser_file
-    weight: 7
-    settings:
-      entity_browser: media_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      view_mode: default
     third_party_settings: {  }
     region: content
   field_metatag:
@@ -168,7 +155,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_course_heading:
-    weight: 8
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -176,7 +163,7 @@ content:
     type: string_textfield
     region: content
   field_vih_course_subheading:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -215,6 +202,19 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_image:
+    type: entity_browser_file
+    weight: 8
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_vih_paragraphs:
     weight: 12
     settings:
