--- a/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
+++ b/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.node.embedded_teaser_list
     - field.field.node.event.body
-    - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_vih_banner
     - field.field.node.event.field_vih_cource_contact_person
@@ -16,6 +15,7 @@ dependencies:
     - field.field.node.event.field_vih_event_price
     - field.field.node.event.field_vih_event_start_date
     - field.field.node.event.field_vih_event_status
+    - field.field.node.event.field_vih_image
     - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.scheduled_update
     - image.style.vih_event_teaser
@@ -40,18 +40,9 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
-    region: content
-  field_image:
-    weight: 0
-    label: hidden
-    settings:
-      image_style: vih_event_teaser
-      image_link: ''
-    third_party_settings: {  }
-    type: image
     region: content
   field_vih_event_end_date:
     type: datetime_default
@@ -70,6 +61,15 @@ content:
     settings:
       format_type: medium
       timezone_override: ''
+    third_party_settings: {  }
+  field_vih_image:
+    type: image
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      image_style: vih_event_teaser
+      image_link: ''
     third_party_settings: {  }
 hidden:
   field_metatag: true
