--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.body
-    - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_vih_banner
     - field.field.node.event.field_vih_cource_contact_person
@@ -16,6 +15,7 @@ dependencies:
     - field.field.node.event.field_vih_event_price
     - field.field.node.event.field_vih_event_start_date
     - field.field.node.event.field_vih_event_status
+    - field.field.node.event.field_vih_image
     - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.scheduled_update
     - node.type.event
@@ -48,7 +48,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_image: true
   field_metatag: true
   field_vih_banner: true
   field_vih_cource_contact_person: true
@@ -59,6 +58,7 @@ hidden:
   field_vih_event_price: true
   field_vih_event_start_date: true
   field_vih_event_status: true
+  field_vih_image: true
   field_vih_paragraphs: true
   langcode: true
   scheduled_update: true
